src/pages/chats/Chats.module.css
.chatContainer {
    text-align: center;
    background: white;
    padding: 12px;
    border-radius: 8px;
    margin-top: 0px;
    height:100%
  }

  .textContext{
    display: flex;
    justify-content: flex-start;
    font-weight: bold;
  }
  
  .chatLabel {
    margin-right: 20px;
  }
  
  .chatFormControl {
    height: 30px;
  }
  
  .chatCardContainer {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
  }

    /* .chatscreen {
      margin-top: 20px;
      position: fixed;
      bottom: 1px;
      width: 80%;
      margin-right: 20px;
    } */
  
  
  .chatCardNew {
    align-items: center;
    justify-content: center;
    padding-bottom: 1px;
    background-color: red;
  }
  .chatCard {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  

  .chatScroll {
    height: 70vh;
    overflow-y: auto;
  }
  
  
  .chatHeading {
    text-align: center;
    margin-bottom: 10px;
  }
  
  .chatParagraph {
    text-align: center;
    color: #312e81;
    font-size: 1.5em;
    font-weight: bold;
  }

  .chatParagraphText {
    color: var(--Black, #000);
    font-size: 16px;
    font-style: normal;
    font-weight: 600;
    line-height: 24px;
    
  }

  .chatCard {
    height: 100%;
  }
  
  .chatCardContent {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    height: 40vh;
    gap: 0px;
  }
  
  
  .bigInputContainer {
    text-align: center;
    margin-top: 20px;
  }
  
  .bigInput {
    width: 100%; 
    padding: 7px;
    font-size: 0.9rem;
    border: 1px solid var(--Neutral-400, #94a3b8);
    border-radius: 10px;
    box-sizing: border-box;
    min-height: 1.2rem;
  }

  .inputWithSendIcon {
    position: relative;
  }
  

  .chatParagraphSuggestion {
    text-align: center;
    padding: 10px;
    cursor: pointer;
  border: 1px solid var(--Neutral-300, #cbd5e1);
  border-radius: 0.8rem;
  color: #475569;
  color: var(--Neutral-600, #475569);
  font-family: Into, Lato;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
}

.inputContainer {
  position: relative;
}

.textAreaContainer {
  position: relative;
}
  
.ResponseCardContent{
  padding: 10px 15px;
  min-height: 200px;
}

.ResponseCardContent {
  /* background-color: #f0f0f0; */
  border-radius: 10px;
  padding: 15px;
  margin-top: 20px;
}

.responseContent {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
}


@media (min-width: 601px){
  .responseContent {
    padding-left: 15%;
    padding-right: 15%;    
  }
}



.askedQuestion {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
}

.userImage {
  width: 28px;
  height: 28px;
  border-radius: 50%;
  margin-right: 15px;
  margin-top: 0.3rem;
}

.chatimg{
  height: 28px;
  margin-left: -7px;
  margin-bottom: 4px;
}

.response {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  text-align: left;
}

.responseImage {
  width: 33px;
  height: 33px;
  border-radius: 50%;
  margin-right: 15px;
}

.askedQuestionText{
  font-weight: bold;
  text-align: left;
}


@media (min-width: 601px){
  .SendButton {
    position: absolute;
    right:15.5%;
    bottom: 0.5rem;
    z-index: 999;
    height: 1.7rem
  } 
}

@media (max-width: 600px){
.SendButton {
  position: absolute;
  height: 1.7rem;
  z-index: 999;
  bottom: -0.7rem ;
  right: 1rem;
  /* top:1rem */
}
}

.textarea{
  position: relative;
  width: 100%;
}


@media (max-width: 600px) {
  .response {
    font-size: 14px; 
  }
  .askedQuestionText{
    font-size: 14px;
  }
  .chatHeading{
    font-size: 24px;
  }
  .chatParagraph{
    font-size: 17px;
  }
  .chatParagraphText{
    font-size: 13px;
  }
  .chatCardContent{
    height: 80vh;
  }
  .amchattext{
    font-size: 25px;
  }
  .chatimg{
    height: 20px;
  }
  .chatParagraph{
    font-size: 17px;
  }
}

@media (max-width: 1200px) {
  .chatCardContent {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    height: auto;
    gap: 0px
  }
}

/* ---------------------------------
new chat styles
-------------------------------- */

.amChatContainer {
  height:63vh;
  margin-top: 1rem;
  border-radius: 0.5rem;
  padding:0.8rem;
  display:flex;
  flex-direction: row;
  justify-content: center;
}



.defaultChatContainer {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

@media (max-width: 600px) {
   .amChatContentContainer {
    width: 100%; 
    flex-wrap: wrap;
    display: flex;
    height:auto;
    overflow: auto;
  }
}

@media (min-width: 601px){
  .amChatContentContainer{
    height: 90%;
    flex-wrap: wrap;
    width: 100%;
  }
}
  

